--- a/styles/packages.css
+++ b/styles/packages.css
@@ -39,40 +39,36 @@
     position: relative;
 }
 
-/* .tg-secondary-nav-bar {
+.tg-secondary-nav-bar {
     background: rgba(248, 248, 248, 1);
     display: flex;
-    justify-content: space-around;
-    padding: 60px ;
+    justify-content: space-between;
+    /* align-items: center; */
 }
 
-.tg-secondary-nav-bar a li {
-    cursor: pointer;
-}
-
-.tg-secondary-nav-bar li {
-    text-align: center;
-}
-
-.tg-secondary-nav-bar li p {
-    display: inline;
+.tg-secondary-nav-bar .nav {
+    display: flex;
+    padding: 60px;
     font-family: Poppins;
     font-size: 20px;
     font-weight: 700;
     line-height: 30px;
     letter-spacing: 0.1em;
-    margin-left: 10px;
-    margin-top: -50px;
+    cursor: pointer;
 }
 
-.tg-secondary-nav-bar .snb-gallery {
-    background-color: rgba(248, 248, 248, 1);
+.tg-secondary-nav-bar .nav img {
+    max-width: 85%;
+    max-height: 85%;
 }
 
-.tg-secondary-nav-bar li.split {
-    float: right;
-    background-color: green;
-} */
+.tg-secondary-nav-bar .nav p {
+    padding-left: 15px;
+}
+
+.tg-secondary-nav-bar .gallery {
+    background-color: rgba(255, 255, 255, 1);
+}
 
 .tg-image-and-information {
     display:flex;
@@ -83,8 +79,7 @@
     display: grid;
     grid-gap: 20px;
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-    grid-auto-rows: auto;
-    /* margin-left: 50px; */
+    grid-auto-rows: 245px;
 }
 
 .ii-image-gallery div {
