--- a/styles/packages.css
+++ b/styles/packages.css
@@ -35,15 +35,16 @@
 
 .tour-gallery-container {
     max-width: 1350px;
-    margin: -5.25% auto ;
+    height: 2000px;
+    margin: -5.25%  auto 0px auto; 
     position: relative;
+    box-shadow: 0px 4px 48px 12px rgba(0, 0, 0, 0.09);
 }
 
 .tg-secondary-nav-bar {
     background: rgba(248, 248, 248, 1);
     display: flex;
     justify-content: space-between;
-    /* align-items: center; */
 }
 
 .tg-secondary-nav-bar .nav {
@@ -55,6 +56,10 @@
     line-height: 30px;
     letter-spacing: 0.1em;
     cursor: pointer;
+}
+
+.tg-secondary-nav-bar .nav:hover  {
+    box-shadow: 0px 4px 48px 12px rgba(0, 0, 0, 0.09);
 }
 
 .tg-secondary-nav-bar .nav img {
@@ -73,13 +78,14 @@
 .tg-image-and-information {
     display:flex;
     margin-top: 40px;
+    padding: 0px 40px;
 }
 
 .ii-image-gallery {
     display: grid;
     grid-gap: 20px;
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-    grid-auto-rows: 245px;
+    grid-auto-rows: auto;
 }
 
 .ii-image-gallery div {
@@ -192,13 +198,14 @@
 
 .tg-plant {
     position: absolute;
-    left: 0%;
+    left: 0px;
+    bottom: 10%;
     z-index: -1;
 }
 
 .tg-vacation {
     position: absolute;
-    right: 5%;
-    bottom: -24%;
+    right: 20px;
+    bottom: 17%;
     z-index: -1;
 }
