--- a/styles/packages.css
+++ b/styles/packages.css
@@ -82,49 +82,69 @@
 }
 
 .ii-image-gallery {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+}
+
+.ig-images {
     display: grid;
     grid-gap: 20px;
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     grid-auto-rows: auto;
 }
 
-.ii-image-gallery div {
+.ig-images div {
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: rgba(255, 255, 255, 1);
 }
 
-.ii-image-gallery div img {
+.ig-images div img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.ig-normal {
+.i-normal {
     grid-column: 1 / span 1;
 }
 
-.ig-normal4 {
+.i-normal4 {
     grid-column: 3 / span 1;
 }
 
-.ig-vertical {
+.i-vertical {
     grid-column: 2 / span 2;
     grid-row: 1 / span 3;
 }
 
-.ig-horizontal-first {
+.i-horizontal-first {
     grid-column: 1 /span 2;
 }
 
-.ig-horizontal-last {
+.i-horizontal-last {
     grid-column: 1 /span 3;
 }
 
-/* .ig-footer {
-    display: block;
-} */
+.ig-footer {
+    display: flex;
+    gap: 20px;
+}
+
+.ig-footer img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.ig-footer p {
+    font-family: Poppins;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+}
 
 .ii-information {
     max-width: 481px;
